// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balanceBuilder assets account should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ASSET>",
    "<ACCOUNT>",
  ],
  "func": "account",
  "module": "assets",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`balanceBuilder system account should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
  ],
  "func": "account",
  "module": "system",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`balanceBuilder system accountEquilibrium should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
  ],
  "func": "account",
  "module": "system",
  "transform": [Function],
  "type": "Substrate",
}
`;

exports[`balanceBuilder tokens accounts should be correct config 1`] = `
QueryConfig {
  "args": [
    "<ACCOUNT>",
    "<ASSET>",
  ],
  "func": "accounts",
  "module": "tokens",
  "transform": [Function],
  "type": "Substrate",
}
`;
